# windows-credential-provider-example

./: .gitignore  CredentialProviderSamples.sln  QRCodeLoginImplementation.md  UpgradeLog.htm  qrcodegen.cpp  qrcodegen.h
helpers/: Helpers.vcxproj  helpers.cpp  helpers.h
qrcodelogin/: CMakeLists.txt  CSampleCredential.h  IMPLEMENTATION_SUMMARY.md  LocalizedStrings.h  Register.reg  SampleCredUICredentialProvider.vcproj  SampleCredUICredentialProvider.vcxproj.filters  TESTING_README.md  Unregister.reg  common.h  csamplecredential.cpp  guid.h  libqrencode_setup_notes.txt  qrcodegen.cpp  qrcodegen.h  qrcodelogin.vcxproj  readme.txt  test_qr_login.cpp  test_qr_login_mock.cpp
qrcodelogincredentialprovider/: CQRCodeLoginCredential.cpp  CQRCodeLoginCredential.h  CQRCodeLoginProvider.cpp  QrCodeLoginCredentialProvider.def  QrCodeLoginCredentialProvider.sln  QrCodeLoginCredentialProvider.vcxproj  README.md  common.h  dll.cpp  dll.h  guid.cpp  guid.h  resource.h  resources.rc
qrcodeloginprovider/: CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  QRCodeLoginProvider.vcxproj  QRCodeLoginProvider.vcxproj.filters  README.md  Register.reg  SampleCredentialProvider.vcxproj  common.h  helpers.cpp  helpers.h
sampleallcontrolscredentialprovider/: SampleAllControlsCredentialProvider.vcxproj  SampleAllControlsCredentialProvider.vcxproj.filters
samplecredentialprovider/: SampleCredentialProvider.vcxproj.filters
samplecreduicredentialprovider/: SampleCredUICredentialProvider.vcxproj  SampleCredUICredentialProvider.vcxproj.filters
samplehardwareeventcredentialprovider/: SampleHardwareEventCredentialProvider.vcxproj  SampleHardwareEventCredentialProvider.vcxproj.filters
sampleqrcodelogin/: CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  CSampleProvider.h  Register.reg  SampleQrCodeLogin.vcxproj  Unregister.reg  common.h  guid.cpp  guid.h  qrcodegen.cpp  qrcodegen.hpp  readme.txt  resource.h  resources.rc  sampleqrcodelogin.def
samplewrapexistingcredentialprovider/: SampleWrapExistingCredentialProvider.vcxproj  SampleWrapExistingCredentialProvider.vcxproj.filters
(+84 files in other folders)
